2008-08-14  Murray Cumming  <murrayc@murrayc.com>

	* examples/dom_parser/Makefile.am:
	* examples/dom_parser/example_with_namespace.xml:
	Added an example using namespace prefixes, from bug 
	#547689.
	* examples/dom_parser/main.cc: Comment out the call to set_validate(), 
	because that example does not have a DTD.
	Show the namespace prefixes in the output.
	* libxml++/attribute.cc: get_value(): Use xmlGetNsProp() instead of 
	xmlGetProp(), so we don't ignore the namespace prefix, so we get 
	the correct value.
	Bug #547689 (Sergei Fedorov)

2008-08-10  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/: Renamed from MSVC_Net2003.

	* MSVC_Net2005/libxml++/libxml++.vcproj: Link against libxml2.lib
	instead of xml2.lib because that's how it is called in Tor's GTK+
	bundle.

	* MSVC_Net2005/libxml++/libxml++.rc.in: Removed "#include resource.h"
	because there is no resource.h.

	* MSVC_Net2005/libxml++/libxml++.sln: Build all examples by default.

	* Makefile.am:
	* configure.in: Adapt build files for the MSVC_Net2003 -> MSVC_Net2005
	rename.

2.23.2:

2008-05-05  Murray Cumming  <murrayc@murrayc.com>

	* examples/sax_parser/main.cc (main): Use parse_file() but leave 
	the parse_chunk() version commented out, to simplify this example.
	* examples/sax_parser/myparser.cc
	Catch Glib::ConvertError exceptions when using std::cout, though 
	libxml++ should really always supply valid UTF-8 to us.

2008-04-14  Armin Burgmeier  <armin@arbur.net>

	* libxml++/parsers/saxparser.h:
	* libxml++/parsers/saxparser.cc: Added a parse_chunk_raw() method and
	changed parse_chunk() to use it.

2.23.1:

2008-03-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/schemavalidation/Makefile.am: Corrected a filename to 
	fix distcheck
	* libxml++/schema.h:
	* libxml++/validators/schemavalidator.h: Added the newin2p24 doxygen 
	keyword.

2008-03-26  Emilien KIA  <cursor@free.fr>

	* configure.in:
	* libxml++/Makefile.am:
	* libxml++/libxml++.h:
	* libxml++/schema.cc: