@@ -1,3 +1,9 @@
+2008-08-16  Murray Cumming  <murrayc@murrayc.com>
+
+	* libxml++/attribute.cc: get_value(): xmlGetNsProp() takes the 
+	namespace URI, not the prefix.
+	Bug #547689 (Sergei Fedorov)
+
 2008-08-14  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/dom_parser/Makefile.am:
